# 20240603-aca-telegraf

./: Dockerfile  Dockerfile.telegraf  app.py  docker-compose.yml  pyproject.toml  telegraf.conf
